<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/id_tv_usr_birthday_picker_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_user_birthday_year" />

    <TextView
        android:id="@+id/id_tv_user_notice_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_user_birthday_year_unit" />

    <TextView
        android:id="@+id/id_tv_usr_birthday_picker_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_user_birthday_month" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_user_birthday_month_unit" />

    <TextView
        android:id="@+id/id_tv_usr_birthday_picker_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_user_birthday_day" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_user_birthday_day_unit" />

</LinearLayout>
