<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/id_ll_setting_alarm_dialog"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="16dp"
	android:paddingRight="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.foogeez.fooband" >
  
		<include layout="@layout/included_setting_dialog_title" />  
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:orientation="horizontal" >

	        <com.grdn.wheels.WheelVerticalView 
	            android:id="@+id/alarm_hours"
	            app:selectionDivider="@drawable/divider_dark_gradient_horizontal"
	            app:selectionDividerHeight="1px"
	            app:selectionDividerActiveAlpha="100"
	            app:selectionDividerDimmedAlpha="255" 
				android:layout_width="50dp"
	            android:layout_height="wrap_content" />
	
	        <RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent" >
	
	            <TextView
	                android:id="@+id/TextView01"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:text="@string/string_alarm_dialog_hour_minute_divider"
	                android:textSize="18sp" />
	
	        </RelativeLayout>
	
	        <com.grdn.wheels.WheelVerticalView
	            android:id="@+id/alarm_minutes"
	            app:selectionDivider="@drawable/divider_dark_gradient_horizontal"
	            app:selectionDividerHeight="1px"
	            app:selectionDividerActiveAlpha="100"
	            app:selectionDividerDimmedAlpha="255" 
				android:layout_width="50dp"
	            android:layout_height="wrap_content" />
       
	    </LinearLayout>
	

        <LinearLayout
            android:id="@+id/id_ll_week_day_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/id_tv_week0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/string_alarm_dialog_sunday"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_tv_week1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/string_alarm_dialog_monday"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_tv_week2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/string_alarm_dialog_tuesday"
				android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_tv_week3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/string_alarm_dialog_wednesday"
				android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_tv_week4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/string_alarm_dialog_thursday"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_tv_week5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/string_alarm_dialog_friday"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_tv_week6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/string_alarm_dialog_saturday"
                android:textColor="@color/gray"
                android:textSize="18sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/id_cb_alarm_cyclic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:text="@string/string_alarm_dialog_circle_true" />
	        	   	
</LinearLayout>