<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_login_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="50dp" >

    <ImageView
        android:id="@+id/id_iv_welcome_pwd_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/dummy"
        android:scaleType="centerInside"
        android:src="@drawable/logo" >
    </ImageView>

    <RelativeLayout
        android:id="@+id/id_rl_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <EditText
            android:id="@+id/id_et_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/string_user_account"
            android:labelFor="@id/id_et_account"
            android:maxEms="16"
            android:maxLength="33"
            android:minEms="16"
            android:paddingLeft="8dp"
            android:paddingRight="25dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="14sp" >
        </EditText>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/dummy"
            android:src="@drawable/icon_account" />
    </RelativeLayout>

    <TextView
        android:id="@+id/id_tv_user_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_user_password_recover_content"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:baselineAligned="false"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_tv_login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:background="@drawable/bg_image_button_ro"
            android:clickable="true"
            android:gravity="center"
            android:layout_gravity="top"
            android:text="@string/string_user_password_complete"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/id_tv_register"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_image_button_ro"
            android:clickable="true"
            android:contentDescription="@string/dummy"
            android:gravity="center"
            android:text="@string/string_user_passwrod_recovered_back" />

    </LinearLayout>

</LinearLayout>