<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:focusable="true"  
	android:focusableInTouchMode="true"  >
    
    <include layout="@layout/included_setting_activity_title" /> 
    
      
     <EditText
              android:id="@+id/id_et_password_old"
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:background="@drawable/bg_edittext"
              android:inputType="text"
              android:labelFor="@id/id_et_password"
              android:maxEms="16"
              android:minEms="6"
              android:paddingLeft="8dp"
              android:maxLength="31"
              android:textSize="14sp"
              android:text="@string/string_user_password_old"
              android:layout_marginTop="30dp"
              android:layout_marginLeft="22dp"
              android:layout_marginRight="22dp"  />
     	     	      
     <EditText
              android:id="@+id/id_et_password_new"
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:background="@drawable/bg_edittext"
              android:inputType="text"
              android:labelFor="@id/id_et_password"
              android:maxEms="16"
              android:minEms="6"
              android:paddingLeft="8dp"
              android:maxLength="31"
              android:textSize="14sp"
              android:text="@string/string_user_password_new"
              android:layout_marginTop="8dp"
              android:layout_marginLeft="22dp"
              android:layout_marginRight="22dp"  />
     	  	      
      <EditText
              android:id="@+id/id_et_password_new_re"
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:background="@drawable/bg_edittext"
              android:inputType="text"
              android:labelFor="@id/id_et_password"
              android:maxEms="16"
              android:minEms="6"
              android:paddingLeft="8dp"
              android:maxLength="31"
              android:textSize="14sp"
              android:text="@string/string_user_password_new_re"
              android:layout_marginTop="8dp"
              android:layout_marginLeft="22dp"
              android:layout_marginRight="22dp" />
   

    <Button
        android:id="@+id/btn_submit_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/string_user_pwd_change_submit" />
 

</LinearLayout>
